--- a/body.css
+++ b/body.css
@@ -4,18 +4,26 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    min-height: 50vh;
     background-color: rgb(245, 245, 245);
     font-family:'Roboto Slab', serif;
-    font-size: small;
     line-height: 1.5;
     margin: 0;
-    padding: 0;}
+    padding: 0;
+    
 
+  }
   h1 {
     text-align: center;
-    font-family:'Roboto Slab', serif; }
- 
+    font-family:'Roboto Slab', serif;
+
+
+    
+  }
+  
+
+  
+  
   h1, h2, h3, h4, h5, h6 {
     align-items: center;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -24,21 +32,18 @@ body {
     text-transform: uppercase;}
 
   
-  p {
-    margin-bottom: 1.5em;
-  }
+
 
 header {
   display: block;
   block-size: auto;
   background-color: #556b2f;
   color: #fff;
-  padding: 20px;
   
 }
 
 .logo {
-    padding-top: 10px;
+  padding-top: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -58,12 +63,12 @@ header {
     color: rgb(171, 202, 154);
     padding: 20px;}
   
-
+    .spacer {
+      height: 50px;}
   /* Estilos responsivos */
   @media only screen and (min-width: 768px) {
     body {
       align-items: center;
-      font-size: 10px;
       
     }
     
@@ -83,5 +88,4 @@ header {
   }
   
 
-  .spacer {
-    height: 100px;}
+  
