--- a/body.css
+++ b/body.css
@@ -1,172 +1,218 @@
 /* Estilos generales */
-
-@media print {
-  body * {
-    visibility: hidden;
-  }
-  #canvas, #canvas * {
-    visibility: visible;
-  }
-  #canvas {
-    position: absolute;
-    left: 0;
-    right: 0;
-    margin: auto;
-    top: 0;
-    bottom: 0;
-    width: 1200px;
-    height: 1200px;
-  }
+head{
+  background-color: #ffffff;
+  margin: auto;
 }
 
-button{
-  width: 70px;
-    height: 23px;
+header{
+  background-color: #ffffff;
+  margin: auto;
+  margin-top: 40px;
+
 }
 
-.page-container {
-   text-align: center;
-   align-items: center;
-   max-width: 100px;
-   padding: 0 10px;
-   text-align: center;
-  margin: 0 auto;}
-
-
-@media screen and (max-width: 600px) {
-  .page-container {
-    max-width: 100%;
-    padding: 10px;
-  }
-}
-
-
+/* Establecer la fuente y el color de fondo para el cuerpo del sitio web */
 body {
-  margin: 0;
-  padding: 0;
-  background-color: rgb(255, 255, 255);
+  margin-top: 50px;
+  display: block;
+  background-color: #ffffff;
+  font-family: Arial, sans-serif;
+  margin: auto;
 }
 
+h3{
+    display: block;
+    margin-top: 20px;
+    margin: 35px;
+    margin-bottom: 20px;  }
 
-
-.header {
-  background-image: url("titlemandal.png");
-  background-size: cover;
-  height: 400px;
+h2{
+  display: block;
+  margin-top: 20px;
+  margin: 35px;
+  margin-bottom: 20px; 
 }
 
-@media screen and (max-width: 800px) {
-  .header {
-    max-width: 800px;
-  }
-}
+h1{
+    display: block;
+    margin-top: 20px;
+    margin: 35px;
+    margin-bottom: 35px;  }
 
-@media screen and (max-width: 600px) {
-  .header {
-    max-width: 100%;
-  }
-}
-
-header img {
-  width: 50%;
-  height: auto;
-  background-size: cover;
-  padding: 50px;
-
-}
 p{
-  text-align: center;
-  height: 4em;
+  margin-top: 20px;
+  margin-bottom: 20px;
+
+}
+
+/* Establecer el diseño para la imagen y el texto del encabezado */
+.container-fluid img {
+  display: block;
+  float: left;
+  margin-right: 20px;
+  margin-top: 50px;
+
+}
+
+.container-fluid p {
+  display: block;
+  float: right;
+  margin-right: 20px;
+  margin-block-end: 50px;
+  margin-top: 50px;
+  margin-block-start: 20px;
+}
+
+/* Establecer el margen superior y justificar el texto en la sección principal */
+section{
+  margin-top: 100px;
+  text-align: justify;
+}
+
+/* Establecer el margen y eliminar el borde para las imágenes */
+img{
+
+  margin: auto;
+  border: 0px;
+  padding-top: 25px;
+}
+
+iframe{
+
+    margin: auto;
+    border: 0px;
+    padding-top: 25px;
+  }
+
+
+   
+/* Establecer el tamaño máximo y la alineación para los videos */
+
+
+/* Establecer el estilo y la posición para la barra de navegación */
+nav {
+  background-color: rgba(252, 240, 224, 0.945);
+  position: fixed;
+  top: 0;
+  padding-top:  10cm;
+  width: 800px;
+  height: 28px;
+  padding-bottom: 10px;
+  margin: auto;
+  padding-inline-end: 20px;
+}
+
+
+
+/* Establecer el estilo para la lista de navegación */
+nav ul {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  justify-content: space-around;
+  list-style-type: none;
+  margin:auto;
   text-align: center;
-  font-size: smaller;
-  width: 50%;
-  padding-top: 15px;
+
 }
 
-p:first-child {
-  margin-bottom: 50px;
+a img{
+  
+  size: 5px;
 }
 
 
-.image-container {
-  display: inline-block;
+.address {
+  font-size: 12px;
+  float:left;
+  margin-right: 50px;}
+ 
+
+.telefonos{
+  font-size: 12px;
+  margin-right: 50px;}
+
+  
+
+
+
+.email {
+  display:block;
+
+float: right;
+font-size: 12px;
+margin-right: 600px;}
+
+
+
+.social-links{
+ display:block;
+float:right ;
+font-size: 12px;
+margin-right: 620px;
+padding: 0px;
+margin-top: -245px;}
+
+
+.form{
+
+  display: block;
+  margin-bottom: 30px;
+  float:left;
+  margin-left: 500px;
+  margin-top: -170px;
+  padding-bottom: 10px;
+  border-top: 1px solid rgb(255, 255, 255);
+}  
+
+  
+
+.form{
+  
+  float: left;
+  flex-flow: column;
   justify-content: center;
   align-items: center;
-  padding: 140px;
-  padding: 50px;
-
-  
-
-}
-  
-
-img {
-  max-width: 100%;
-  max-height: 100%;
-  object-fit: contain;
-
 
 }
 
 
-
-
-select{
-  height: 20px;
-  width: 70px;
-  font-size: smaller;
-
-}
-
-.container {
-  display: block;
-  grid-template-rows: 1fr auto;
-  gap: 10px;
-}
-
-.controls-container {
-  display: block;
-  align-items: center;
-  gap: 5px;
-  margin-left: 0px;
-}
-
-label {
-  display: block;
-  font-size: 1.2rem;
-  margin-left: 0px;
-  align-items: center;
-
-}
-
-input[type="color"] {
-  height: 40px;
-  width: 40px;
-  border: none;
-  align-items: center;
-
-}
-
-input[type="range"] {
-  width: 100px;
-  border: none;
-}
-
-
-  
-
-
-A{
-  display: flex;
-  text-align: center;
+#info{
+  width: 120px;
+  height: 10px;
+  margin: 5px;
   color: rgb(0, 0, 0);
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: smaller;
-  display: block; 
-  margin-top: 10px;
+  margin-top: 100px;
+
 }
+#email{
+  text-align: center;
+  margin: 10px;
+  width: 120px;
+  height: 20px;
+  background-color: rgb(250, 250, 250);
+  color: rgb(0, 0, 0)
 
+}
+#info{
+  align-items: center;
+  text-align: center;
+  width: 150px;
+  background-color: black;
+  color: rgb(0, 0, 0)
+}
+#enviar{
+  align-items: center;
+  text-align: center;
+  height: 20px;
+  background-color: black;
+  color: white;
+  position: relative;}
 
+  #cookie-banner {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #83ffb3f2;
+    padding: 8px;
+    text-align: center;
+    display: none; }
